// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/notification/NotificationFooter.tsx should default to known avatar if no user found 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="flex flex-wrap items-center gap-1 text-xs opacity-80"
        >
          <div
            aria-labelledby="3"
            role="img"
            style="display: inline-block; position: relative; outline: 0;"
          >
            <span
              class="css-122fgfa"
            >
              <img
                alt=""
                aria-hidden="true"
                class="css-13ep12v"
                data-vc="avatar-image"
                src="https://github.atlasify.io/favicon.ico"
                style="border-radius: 2px;"
              />
            </span>
            <span
              hidden=""
              id="3"
            >
              Repository
            </span>
          </div>
          <div>
            Repository
          </div>
        </div>
        <div
          class="flex flex-wrap items-center gap-1 text-xs opacity-80"
        >
          <span
            aria-label="Bitbucket"
            class="css-5vjqu0"
            role="img"
            style="--logo-color: inherit; --logo-fill: currentColor;"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="32"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              
      
              <path
                d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                fill="#1868DB"
              />
              
    
            </svg>
          </span>
          Repository
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs opacity-80"
      >
        <div
          aria-labelledby="3"
          role="img"
          style="display: inline-block; position: relative; outline: 0;"
        >
          <span
            class="css-122fgfa"
          >
            <img
              alt=""
              aria-hidden="true"
              class="css-13ep12v"
              data-vc="avatar-image"
              src="https://github.atlasify.io/favicon.ico"
              style="border-radius: 2px;"
            />
          </span>
          <span
            hidden=""
            id="3"
          >
            Repository
          </span>
        </div>
        <div>
          Repository
        </div>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs opacity-80"
      >
        <span
          aria-label="Bitbucket"
          class="css-5vjqu0"
          role="img"
          style="--logo-color: inherit; --logo-fill: currentColor;"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="32"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            
      
            <path
              d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
              fill="#1868DB"
            />
            
    
          </svg>
        </span>
        Repository
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/notification/NotificationFooter.tsx should render itself & its children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="flex flex-wrap items-center gap-1 text-xs opacity-80"
        >
          <div
            aria-labelledby="1"
            role="img"
            style="display: inline-block; position: relative; outline: 0;"
          >
            <span
              class="css-122fgfa"
            >
              <img
                alt=""
                aria-hidden="true"
                class="css-13ep12v"
                data-vc="avatar-image"
                src="https://github.atlasify.io/favicon.ico"
                style="border-radius: 2px;"
              />
            </span>
            <span
              hidden=""
              id="1"
            >
              Repository
            </span>
          </div>
          <div>
            Repository
          </div>
        </div>
        <div
          class="flex flex-wrap items-center gap-1 text-xs opacity-80"
        >
          <span
            aria-label="Bitbucket"
            class="css-5vjqu0"
            role="img"
            style="--logo-color: inherit; --logo-fill: currentColor;"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="32"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              
      
              <path
                d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                fill="#1868DB"
              />
              
    
            </svg>
          </span>
          Repository
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs opacity-80"
      >
        <div
          aria-labelledby="1"
          role="img"
          style="display: inline-block; position: relative; outline: 0;"
        >
          <span
            class="css-122fgfa"
          >
            <img
              alt=""
              aria-hidden="true"
              class="css-13ep12v"
              data-vc="avatar-image"
              src="https://github.atlasify.io/favicon.ico"
              style="border-radius: 2px;"
            />
          </span>
          <span
            hidden=""
            id="1"
          >
            Repository
          </span>
        </div>
        <div>
          Repository
        </div>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs opacity-80"
      >
        <span
          aria-label="Bitbucket"
          class="css-5vjqu0"
          role="img"
          style="--logo-color: inherit; --logo-fill: currentColor;"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="32"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            
      
            <path
              d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
              fill="#1868DB"
            />
            
    
          </svg>
        </span>
        Repository
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/notification/NotificationFooter.tsx should render itself & its children when last_read_at is null 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="flex flex-wrap items-center gap-1 text-xs opacity-80"
        >
          <div
            aria-labelledby="2"
            role="img"
            style="display: inline-block; position: relative; outline: 0;"
          >
            <span
              class="css-122fgfa"
            >
              <img
                alt=""
                aria-hidden="true"
                class="css-13ep12v"
                data-vc="avatar-image"
                src="https://github.atlasify.io/favicon.ico"
                style="border-radius: 2px;"
              />
            </span>
            <span
              hidden=""
              id="2"
            >
              Repository
            </span>
          </div>
          <div>
            Repository
          </div>
        </div>
        <div
          class="flex flex-wrap items-center gap-1 text-xs opacity-80"
        >
          <span
            aria-label="Bitbucket"
            class="css-5vjqu0"
            role="img"
            style="--logo-color: inherit; --logo-fill: currentColor;"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="32"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              
      
              <path
                d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                fill="#1868DB"
              />
              
    
            </svg>
          </span>
          Repository
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs opacity-80"
      >
        <div
          aria-labelledby="2"
          role="img"
          style="display: inline-block; position: relative; outline: 0;"
        >
          <span
            class="css-122fgfa"
          >
            <img
              alt=""
              aria-hidden="true"
              class="css-13ep12v"
              data-vc="avatar-image"
              src="https://github.atlasify.io/favicon.ico"
              style="border-radius: 2px;"
            />
          </span>
          <span
            hidden=""
            id="2"
          >
            Repository
          </span>
        </div>
        <div>
          Repository
        </div>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs opacity-80"
      >
        <span
          aria-label="Bitbucket"
          class="css-5vjqu0"
          role="img"
          style="--logo-color: inherit; --logo-fill: currentColor;"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="32"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            
      
            <path
              d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
              fill="#1868DB"
            />
            
    
          </svg>
        </span>
        Repository
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
